syntax = "proto3";

package hsi;

option go_package = "github.com/synheart/synheart-cli/internal/proto/hsi";

message Event {
  string schema_version = 1;
  string event_id = 2;
  string ts = 3;
  Source source = 4;
  Session session = 5;
  Signal signal = 6;
  Meta meta = 7;
}

message Source {
  string type = 1;
  string id = 2;
  optional string side = 3;
}

message Session {
  string run_id = 1;
  string scenario = 2;
  int64 seed = 3;
}

message Signal {
  string name = 1;
  string unit = 2;
  SignalValue value = 3;
  double quality = 4;
}

// signal value can be scalar, string, or vector
message SignalValue {
  oneof kind {
    double scalar = 1;
    string text = 2;
    Vector3 vector = 3;
  }
}

message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Meta {
  int64 sequence = 1;
}

